--- a/build.yaml
+++ b/build.yaml
@@ -6,8 +6,8 @@ targets:
 
 builders:
   generators:
-    target: ":custom_drift_generator" # Generator name
-    import: "package:custom_drift_generator/generators.dart"
+    target: ":custom_sync_drift_generator" # Generator name
+    import: "package:custom_sync_drift_generator/generators.dart"
     builder_factories: ["generateClassSyncCode", "generateSyncCode"] # Builder name(BuilderOption) this is a definition
     build_extensions: { ".dart": [".classsync.dart", ".sync.dart"] }
     auto_apply: dependents
